...
        clipBehavior: Clip.antiAliasWithSaveLayer,
        elevation: 5,
        child: Padding(
            padding: const EdgeInsets.all(20),
            child: Column(
                children: [
                  const Text('Add a mood to your day',
                      style: TextStyle(
                          fontSize: 15.0,
                          fontWeight: FontWeight.w500
                      )
                  ),
                  Container(
...
