...
    super.dispose();
  }

  @override
  Widget build(BuildContext context) {
    return Scaffold(
        appBar: AppBar(title: const Text('Create a Moodalyse account')),
        body: Container(
          padding: const EdgeInsets.fromLTRB(10, 20, 10, 0),
          height: 400,
          child: Column(
            mainAxisAlignment: MainAxisAlignment.spaceBetween,
            children: [
...
